fix(search): fix z-index style issue

--- a/src/assets/style/_elements.scss
+++ b/src/assets/style/_elements.scss
@@ -363,10 +363,10 @@ $gc-small: $form-width - $gc-large - 4;
   background: #fff;
   position: sticky !important;
   top: 64px;
-  // z-index: 2;
+  z-index: 1;
 }
 .mat-tab-body-wrapper {
-  z-index: -1;
+  z-index: 0;
 }
 
 .search-results-title {
